change flask to fastapi

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ events {
 }
 
 http {
-    upstream flask_app {
+    upstream api {
         server 172.20.0.5:5000;  # Adresse de Gunicorn
     }
 
@@ -13,7 +13,7 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://flask_app;  # Envoie les requêtes à Gunicorn
+            proxy_pass http://api;  # Envoie les requêtes à Gunicorn
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
