--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 services:
-  flask-app:
+  api:
     build:
-      context: ./flask_app
+      context: ./fastapi
       dockerfile: Dockerfile
-    container_name: flask-app
+    container_name: api
     ports:
       - '5000'
+    # volumes:
+    #   - ./fastapi:/api
     networks:
       kube:
         ipv4_address: 172.20.0.5
@@ -13,7 +15,9 @@ services:
       - mongodb
 
   mongodb:
-    image: mongo:latest
+    build:
+      context: ./mongo
+      dockerfile: Dockerfile
     container_name: mongodb
     ports:
       - '27017:27017'
@@ -27,14 +31,16 @@ services:
         ipv4_address: 172.20.0.6
   
   nginx:
-    image: nginx:latest
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     container_name: nginx
     ports:
       - '80:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - flask-app
+      - api
     networks:
       kube:
         ipv4_address: 172.20.0.7
