--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   api:
     build:
-      context: ./fastapi
+      context: ./api
       dockerfile: Dockerfile
     container_name: api
     ports:
-      - '5000'
-    # volumes:
-    #   - ./fastapi:/api
+      - 5000
+    volumes:
+      - ./api:/api
     networks:
       kube:
         ipv4_address: 172.20.0.5
@@ -20,7 +20,7 @@ services:
       dockerfile: Dockerfile
     container_name: mongodb
     ports:
-      - '27017:27017'
+      - 27017:27017
     volumes:
       - mongo_data:/data/db
     environment:
@@ -36,7 +36,7 @@ services:
       dockerfile: Dockerfile
     container_name: nginx
     ports:
-      - '80:80'
+      - 80:80
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
